ProjectType周りの型定義変更
